kubernetes/cpu-stress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-stress
  namespace: team2-test
spec:
  containers:
  - name: cpu-stress
    image: progrium/stress
    command: ["stress"]
    args: ["--cpu", "4", "--timeout", "60s"]
