kubernetes/cwagent-fluentd-quickstart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-cloudwatch
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudwatch-agent
  namespace: amazon-cloudwatch
spec:
  selector:
    matchLabels:
      name: cloudwatch-agent
  template:
    metadata:
      labels:
        name: cloudwatch-agent
    spec:
      containers:
        - name: cloudwatch-agent
          image: amazon/cloudwatch-agent:latest
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "200Mi"
              cpu: "200m"
          volumeMounts:
            - name: cwagentconfig
              mountPath: /etc/cwagentconfig
      terminationGracePeriodSeconds: 30
      volumes:
        - name: cwagentconfig
          configMap:
            name: cwagentconfig
