kubernetes/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client
  namespace: myapp
spec:
  containers:
  - name: mysql-client
    image: mysql:5.7
    command: ['sleep', '3600']
