kubernetes/front-server.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: frontend-server
  namespace: team2-test
spec: 
  selector: 
    matchLabels: 
      app: frontend 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: frontend  
    spec: 
      containers: 
        - name: frontend 
          image: 727646470302.dkr.ecr.ap-southeast-1.amazonaws.com/mid2-frontend
          ports: 
            - containerPort: 3000
---
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-service
  namespace: team2-test
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      # port: 9443
      port: 3000
      targetPort: 3000
