kubernetes/back-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  namespace: team2-test
spec:
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: 8000
  tls:
    termination: edge
  path: /api
