kubernetes/front-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: team2-test
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 3000
  tls:
    termination: passthrough
